# borderless-window-opengl

./: CMakeLists.txt  README.md  borderless-window-rendering.cpp  borderless-window-rendering.h  borderless-window.cpp  borderless-window.h  example.cpp  glad.h  imgui_window.cpp  opengl_context.cpp  opengl_context.h  resources.rc  vs2013_build.bat  vs2013_debug.bat  vs2015_build.bat  vs2015_debug.bat
imgui_borderless_window/: borderless-window.h  borderless_window.cpp  borderless_window.h  glad.c  imgui_window.cpp  imgui_window.h
imgui_winapi_gl2/: imgui_impl_gl2.cpp  imgui_impl_gl2.h
imgui_winapi_gl3/: imgui_impl_gl3.cpp  imgui_impl_gl3.h
